<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".users.UserProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/gradient"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient">

        <!-- Third-party libraryto render circular image view easily and rapidly
             Dodenhof, H, A circular ImageView for Android, GitHub repository, https://github.com/hdodenhof/CircleImageView -->
        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_picture_view_id"
            android:layout_width="79dp"
            android:layout_height="96dp"
            android:paddingTop="24dp"
            android:src="@drawable/ic_user_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username_profile_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture_view_id" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/subject_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/subjects_tutored_txt"
        android:textAlignment="center"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ListView
                android:id="@+id/listView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scrollbarStyle="outsideOverlay"
                android:listSelector="@android:color/transparent" /> <!-- Disable ripple effect -->

            <com.alphabetik.Alphabetik
                android:id="@+id/alphSectionIndex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:padding="3dp"
                app:fontSize="14sp"
                app:itemsColor="@color/design_default_color_primary" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/session_request_button_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:drawableStart="@drawable/ic_session_request"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/request_a_session_txt"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/chat_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:drawableStart="@android:drawable/sym_action_chat"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/chat_txt"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>